--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,12 +18,17 @@ html {
 }
 
 body {
-  background-color: gray;
+  
   /* Use a system font, if none are available use an available sans-sarif font */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
         Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   margin: 0;
+  background: rgb(255,142,142);
+background: radial-gradient(circle, rgba(255,142,142,0.29175420168067223) 0%, rgba(255,185,198,1) 100%);
+
+ 
 }
+
 
 nav {
   background-color: white;
@@ -39,3 +44,147 @@ main {
 h1 {
   font-size: 3.6rem;
 }
+
+.table {
+	color: rgb(36, 36, 36);
+	background-color: rgb(245, 245, 245);
+}
+
+thead {
+	border-top: none;
+}
+
+.homepage-bg {
+  background-image: url("https://i.ytimg.com/vi/u417zeu6Bi4/maxresdefault.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100%;
+  width:100%;
+
+}
+
+
+.container{
+  width: 1000px;
+  max-width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.box{
+  position: relative;
+  width: 300px;
+  height: 400px;
+  background: #000;
+  box-shadow: 0 30px 30px rgba(0, 0, 0, .5);
+}
+
+.box .imgBox{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.box .imgBox img{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: 0.5s;
+}
+
+.box:hover .imgBox img{
+  opacity: 0;
+}
+
+.box .content{
+  position: absolute;
+  bottom: 20px;
+  left: 10%;
+  width: 80%;
+  height: 60px;
+  background: rgba(255, 255, 255, 0.694);
+  transition: 0.5s;
+  overflow: hidden;
+
+}
+
+.box:hover .content{
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  left: 0;
+}
+
+.box .content h3{
+  font-size: 24px;
+}
+
+.box:hover .content h3{
+  display: none;
+}
+
+.intro{
+  padding: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.box .content .hover-card{
+  opacity: 0;
+  transition: 0.5s;
+}
+
+.box:hover .content .hover-card{
+  opacity: 1;
+  transition-delay: 0.5s;
+}
+
+.profile h2{
+  margin-top: 30px;
+  color: #000;
+}
+
+.profile h2, h4{
+  text-align: center;
+}
+
+.profile p{
+  padding: 10px;
+  font-size: 18px;
+  text-align: justify;
+  margin-top: 50px;
+}
+
+.social{
+  margin-top: 38px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.social i{
+  font-size: 22px;
+}
+
+.animate__animated, .animate__backInRight {
+  text-align: center;
+}
+
+@media only screen and (max-width: 960px){
+  .container{
+      flex-direction:column;
+      justify-content: space-between;
+      align-items: center;
+  }
+  .box{
+      margin: 30px;
+  }
+}
+
