--- a/views/appts/new.ejs
+++ b/views/appts/new.ejs
@@ -1,12 +1,111 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="new-appt-bg">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>A Touch of Class</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="/">Jessica's Booking Co. <i class="fas fa-plane"></i></a>
+            </button>
+            <div class="collapse navbar-collapse">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                  <a class="nav-link" href="/flights">All Flights</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/flights/new">Book a Flight <i class="far fa-plus-square"></i></a>
+                </li>
+            </div>
+      </nav>
+</header>
+
+
 <body>
-<h1>New</h1>    
-</body>
-</html>
+    <h1 class="animate__animated animate__backInRight">Meet the team</h1><br> 
+      </div>
+    <!--Stylists-->
+
+    <div class="container">
+        <div class="box">
+            <div class="imgBox">
+                <img src="https://images.squarespace-cdn.com/content/v1/54d942d5e4b0c4d5e7b8e4f0/1550100745221-UYB7TS4TD689E6CYAF58/ke17ZwdGBToddI8pDm48kM1HSdxB5bzSaLkOTT1i8rp7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QHyNOqBUUEtDDsRWrJLTmzZHn3PYdZUow1T0ZeZQrhaQIc1vht7v0IFrKoabULMlY8cwrD_wyLvt6X_HUi9vX/acting_headshots-76.jpg" alt="">
+            </div>
+            <div class="content">
+                <h3 class="intro"><i class="fas fa-bars"></i> <i class="fas fa-envelope"></i></i></h3>
+                <div class="hover-card">
+                    <div class="profile">
+                        <h2 class="name">JESSICA</h2>
+                        <h4 class="profession">Master Stylist</h4>
+
+                        <p>Hi! I'm Jessica, Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo unde quae quos sint praesentium beatae fugiat deserunt temporibus optio aliquam!</p>
+
+                        <div class="social">
+                            <i class="fab fa-facebook-f"></i>
+                            <i class="fab fa-instagram"></i>
+                            <i class="fab fa-twitter"></i>
+                            <i class="fab fa-youtube"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="imgBox">
+                <img src="https://www.littlesphotography.com/wp-content/uploads/2019/02/Seasy-2117-819x1024.jpg" alt="">
+            </div>
+            <div class="content">
+                <h3 class="intro"><i class="fas fa-bars"></i> <i class="fas fa-envelope"></i></i></h3>
+                <div class="hover-card">
+                    <div class="profile">
+                        <h2 class="name">CHLOE</h2>
+                        <h4 class="profession">Elite Stylist</h4>
+
+                        <p>Hi! I'm Chloe, Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo unde quae quos sint praesentium beatae fugiat deserunt temporibus optio aliquam!</p>
+
+                        <div class="social">
+                            <i class="fab fa-facebook-f"></i>
+                            <i class="fab fa-instagram"></i>
+                            <i class="fab fa-twitter"></i>
+                            <i class="fab fa-youtube"></i>
+                        </div>
+                    </div>
+                </div>
+            </div> 
+        </div>
+
+        <div class="box">
+            <div class="imgBox">
+                <img src="https://i.guim.co.uk/img/media/0fbcc20b2aaa46a1d3674fceaa6573b64d7b4a2a/26_106_3514_4394/master/3514.jpg?width=445&quality=45&auto=format&fit=max&dpr=2&s=856972d257001e0ac89abbb475a4a342" alt="">
+            </div>
+            <div class="content">
+                <h3 class="intro"><i class="fas fa-bars"></i> <i class="fas fa-envelope"></i></i></h3>
+                <div class="hover-card">
+                    <div class="profile">
+                        <h2 class="name">MIAMOR</h2>
+                        <h4 class="profession">Rising Star</h4>
+
+                        <p>Hi! I'm Miamor, Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo unde quae quos sint praesentium beatae fugiat deserunt temporibus optio aliquam!</p>
+
+                        <div class="social">
+                            <i class="fab fa-facebook-f"></i>
+                            <i class="fab fa-instagram"></i>
+                            <i class="fab fa-twitter"></i>
+                            <i class="fab fa-youtube"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    
+    </body>
+    </html>
