--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,7 +31,6 @@ background: radial-gradient(circle, rgba(255,142,142,0.29175420168067223) 0%, rg
 
 
 nav {
-  background-color: white;
   font-size: 1.6rem;
 }
 
@@ -52,15 +51,6 @@ h1 {
 
 thead {
 	border-top: none;
-}
-
-.homepage-bg {
-  background-image: url("https://i.ytimg.com/vi/u417zeu6Bi4/maxresdefault.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: 100%;
-  width:100%;
-
 }
 
 
@@ -175,6 +165,57 @@ thead {
 
 .animate__animated, .animate__backInRight {
   text-align: center;
+}
+
+.hero {
+  background-size: 150%;
+  background-repeat: no-repeat;
+  background-position: left;
+  -webkit-animation: slide 40s ease;
+  transform: translate3d(0,0,0);
+  height: 100vh;
+}
+
+.hero:before {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+}
+
+.hero__content {
+  z-index: 101;
+  position: relative;
+}
+
+@-webkit-keyframes slide {
+  0%   { background-position: left; }
+  50%   { background-position: right; }
+  100% { background-position: left; }
+}
+
+.hero h1 {
+  font-size: 50px;
+  font-weight: 100;
+  color: white;
+  margin: 0;
+}
+
+.hero__content {
+    padding: 200px 100px;
+    max-width: 310px;
+}
+
+.btn {
+  background: #4C384B;
+  color: white;
+  text-decoration: none;
+  padding: 10px 40px;
+  margin: 20px 0;
+  display: inline-block;
+  border-radius: 3px;
+  font-size: 20px;
 }
 
 @media only screen and (max-width: 960px){
