--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,53 @@
-<%- include('partials/header') %>
+<!DOCTYPE html>
+<html lang="en" class="new-appt-bg">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>A Touch of Class</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+</head>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="/">A TOUCH OF CLASS</a>
+            </button>
+            <div class="collapse navbar-collapse">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                  <a class="nav-link" href="/appts">Appointments</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/appts/new">Book <i class="far fa-plus-square"></i></a>
+                </li>
+                  <ul>
+                    <% if (user) { %>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/auth/logout">Logout </a>
+                    </li>
+                    <% } else { %>
+                    <li>
+                      <a class="nav-link" href="/auth/google">Login </a>
+                    </li>
+                    <% } %>
+                  </ul>
+                
+                </li>
+            </div>
+      </nav>
+</header>
 
-<main>
-  <h1>hello, <%= user ? user.name : "friend" %></h1>
-</main>
 
+<div class="hero" style="background-image: url(https://assets.teenvogue.com/photos/5c9b70e0c9fe12685208059f/master/w_1600%2Cc_limit/413552F1-74C8-4703-BD60-3255342BCF29.JPG)">
+  <div class="hero__content">
+    <h1>Where Beauty meets Class.</h1>
+
+
+    <a class="btn" href="/appts/new">Start here</a>
+  </div>
+</div>
 
 <%- include('partials/footer') %>
 
