--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,22 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/stylesheets/style.css" />
-    <title><%= title %></title>
-  </head>
+<html lang="en" class="new-appt-bg">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>A Touch of Class</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+</head>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="/">A TOUCH OF CLASS</a>
+            </button>
+            <div class="collapse navbar-collapse">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                  <a class="nav-link" href="/appts">Appointments</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/appts/new">Book <i class="far fa-plus-square"></i></a>
+                </li>
+                  <ul>
+                    <% if (user) { %>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/auth/logout">Logout </a>
+                    </li>
+                    <% } else { %>
+                    <li>
+                      <a class="nav-link" href="/auth/google">Login </a>
+                    </li>
+                    <% } %>
+                  </ul>
+                
+                </li>
+            </div>
+      </nav>
+</header>
+  
+  
+  
   <body>
-    <nav>
-      <ul>
-        <% if (user) { %>
-        <li>
-          <a href="/auth/logout">Log Out</a>
-        </li>
-        <% } else { %>
-        <li>
-          <a href="/auth/google">Login with Google</a>
-        </li>
-        <% } %>
-      </ul>
-    </nav>
