--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -29,6 +29,11 @@
 <body>
 
 
-<h1>Hello</h1>
+
+
+    <input type="text" name = "airport">
+    <input type="submit" value="submit">
+</form>
+
     </body>
 </html>
