--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -30,8 +30,8 @@
 
 
 
-
-    <input type="text" name = "airport">
+<form action="/comments/show" method="POST">
+    <textarea type="text" name = "airport"></textarea>
     <input type="submit" value="submit">
 </form>
 
