--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,8 @@
+@import url(https://fonts.googleapis.com/css?family=Dancing+Script:700);
+@import url(https://fonts.googleapis.com/css?family=Crimson+Text:400,600,700,400italic);
+
+
+
 html {
   box-sizing: border-box
 }
@@ -25,8 +30,10 @@ body {
   margin: 0;
   background: rgb(255,142,142);
 background: radial-gradient(circle, rgba(255,142,142,0.29175420168067223) 0%, rgba(255,185,198,1) 100%);
-
- 
+  overflow-x: hidden;
+	font: 400 16px/1.8 'Crimson Text', serif;
+ text-align: center;
+    
 }
 
 
@@ -40,9 +47,6 @@ main {
   justify-content: center;
 }
 
-h1 {
-  font-size: 3.6rem;
-}
 
 .table {
 	color: rgb(36, 36, 36);
@@ -237,10 +241,9 @@ div.reviewLocation{
 }
 
 .hero h1 {
-  font-size: 50px;
   font-weight: 100;
   color: white;
-  margin: 0;
+  font: 700 50px/1.2 'Dancing Script', cursive;
 }
 
 .hero__content {
@@ -255,7 +258,7 @@ div.reviewLocation{
   padding: 10px 40px;
   margin: 20px 0;
   display: inline-block;
-  border-radius: 3px;
+  border-radius: 9px;
   font-size: 20px;
 }
 
@@ -269,4 +272,182 @@ div.reviewLocation{
       margin: 30px;
   }
 }
+
+/*Menu*/
+
+
+
+@import url(https://fonts.googleapis.com/css?family=Dancing+Script:700);
+@import url(https://fonts.googleapis.com/css?family=Crimson+Text:400,600,700,400italic);
+
+
+img {
+	max-width: 100%;
+	height: auto;
+}
+
+h1 {
+  font: 700 28px/1.2 'Dancing Script', cursive; 
+}
+
+ h2, h3, h4, h5, h6 {
+	font: 700 54px/1.2 'Crimson Text', serif;
+	margin: 0 0 20px;
+
+}
+
+h2 {
+	font-size: 48px;
+	margin: 0 0 18px;
+}
+
+h3 {
+	font-size: 40px;
+	margin: 0 0 15px;
+}
+
+h4 {
+	font-size: 20px;
+	margin: 0 0 10px;
+}
+
+h5 {
+	font-size: 18px;
+	font-weight: 400;
+	margin: 0 0 8px;
+}
+
+h6 {
+	font-size: 16px;
+	font-weight: 400;
+	margin: 0 0 5px;
+}
+
+
+.module {
+	position: relative;
+	background: rgba(255, 255, 255, 0.29);
+  border-radius: 50px;
+  max-width: 900px;
+  padding: 20px 30px ;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.4);
+  box-shadow: 0 10px 10px 10px  rgba(0, 0, 0, 0.2);
+  width: 1000px;
+  max-width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+ 
+}
+
+
+.module-header {
+	text-align: center;
+	margin: 0 0 60px;
+}
+
+.menu {
+	
+	padding: 0 0 10px;
+	margin: 0 0 20px;
+}
+
+.menu-classic img {
+	margin: 0 0 10px;
+}
+
+.menu-title,
+.menu-price {
+	font-size: 16px;
+	margin: 0;
+}
+
+.intro-title,
+.module-title,
+.callout-text,
+.iconbox-title {
+	font: 700 28px/1.2 'Dancing Script', cursive;
+	margin: 0 0 18px;
+}
+
+.menu-detail {
+	font-size: 14px;
+}
+
+.menu-price-detail {
+	position: relative;
+	text-align: right;
+}
+
+.menu-label {
+	background: #fae7d7;
+	position: relative;
+	display: inline-block;
+	padding: 2px 10px 0px 10px;
+	font-family: 'Crimson Text', serif;
+	letter-spacing: 1px;
+	font-style: italic;
+	font-size: 13px;
+	float: right;
+	top: 5px;
+}
+
+
+
+
+/* ---------------------------------------------- /*
+ * Media
+/* ---------------------------------------------- */
+
+
+@media (max-width: 767px) {
+
+	.menu-title,
+	.menu-detail,
+	.menu-price-detail {
+		text-align: center;
+	}
+
+
+
+@media (max-width: 568px) {
+
+	h1 {
+    font: 700 50px/1.2 'Dancing Script', cursive;
+  } 
+    h2, h3, h4, h5, h6 {
+		font: 700 38px/1.2 'Crimson Text', serif;
+		margin: 0 0 20px;
+		color: #000;
+	}
+
+	h2 {
+		font-size: 30px;
+		margin: 0 0 18px;
+	}
+
+	h3 {
+		font-size: 24px;
+		margin: 0 0 15px;
+	}
+
+	h4 {
+		font-size: 20px;
+		margin: 0 0 10px;
+	}
+
+	h5 {
+		font-size: 16px;
+		font-weight: 400;
+		margin: 0 0 8px;
+	}
+
+	h6 {
+		font-size: 16px;
+		font-weight: 400;
+		margin: 0 0 5px;
+	}
+
+
 
