--- a/views/appts/new.ejs
+++ b/views/appts/new.ejs
@@ -109,8 +109,9 @@
 
 <!--Book Appt-->
 
-    <h1>Book Appointment</h1>
-    <form action="/appts" method="POST">
+   
+    <form id = "reviewForm2" action="/appts" method="POST">
+        <h1>Book Appointment</h1>
         <table class="table">
             <thead>
                 <tr>
@@ -146,173 +147,6 @@
 
 
 
-
-
-<!--Menu-->
-
-
-<section id="popular" class="module">
-    <div class="container2">
-
-        <div class="row">
-            <div class="col-sm-6 col-sm-offset-3">
-                <div class="module-header wow fadeInUp animated" style="visibility: visible; animation-name: fadeInUp;">
-                    <h2 class="module-title">Our Services</h2>
-                </div>
-            </div>
-        </div><!-- .row -->
-
-        <div class="row">
-
-            <div class="col-sm-6">
-
-                <div class="menu">
-                    <div class="row">
-                        <div class="col-sm-8">
-                            <h4 class="menu-title">Extensions</h4>
-                            <div class="menu-detail">2+ hours. Please bring your own extensions</div>
-                        </div>
-                        <div class="col-sm-4 menu-price-detail">
-                            <h4 class="menu-price">$200.00</h4>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="menu">
-                    <div class="row">
-                        <div class="col-sm-8">
-                            <h4 class="menu-title">Microlinks</h4>
-                            <div class="menu-detail">5+ hours. Very natural look.</div>
-                        </div>
-                        <div class="col-sm-4 menu-price-detail">
-                            <h4 class="menu-price">$600.00</h4>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="menu">
-                    <div class="row">
-                        <div class="col-sm-8">
-                            <h4 class="menu-title">Box-Braids</h4>
-                            <div class="menu-detail">5+ hours. Small/Medium/Large</div>
-                        </div>
-                        <div class="col-sm-4 menu-price-detail">
-                            <h4 class="menu-price">$250.00 small<br> $200 medium<br> $150 large </h4>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="menu">
-                    <div class="row">
-                        <div class="col-sm-8">
-                            <h4 class="menu-title">Wash/Style</h4>
-                            <div class="menu-detail">1 hour. Soothing shampoo/conditional treatment and basic style</div>
-                        </div>
-                        <div class="col-sm-4 menu-price-detail">
-                            <h4 class="menu-price">$50.00</h4>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="menu">
-                    <div class="row">
-                        <div class="col-sm-8">
-                            <h4 class="menu-title">Full Color</h4>
-                            <div class="menu-detail">May include bleaching</div>
-                        </div>
-                        <div class="col-sm-4 menu-price-detail">
-                            <h4 class="menu-price">$100.00</h4>
-                        </div>
-                    </div>
-                </div>
-
-            </div><!-- .col-sm-6 -->
-
-            <div class="col-sm-6">
-
-                <div class="menu">
-                    <div class="row">
-                        <div class="col-sm-8">
-                            <h4 class="menu-title">Partial Color</h4>
-                            <div class="menu-detail">May include bleaching</div>
-                        </div>
-                        <div class="col-sm-4 menu-price-detail">
-                            <h4 class="menu-price">$50.00</h4>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="menu">
-                    <div class="row">
-                        <div class="col-sm-8">
-                            <h4 class="menu-title">Basic Style</h4>
-                            <div class="menu-detail">Wash not included</div>
-                        </div>
-                        <div class="col-sm-4 menu-price-detail">
-                            <h4 class="menu-price">$30.00</h4>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="menu">
-                    <div class="row">
-                        <div class="col-sm-8">
-                            <h4 class="menu-title">Kids Wash/Style</h4>
-                            <div class="menu-detail">
-                              1 hour.
-                            </div>
-                        </div>
-                        <div class="col-sm-4 menu-price-detail">
-                            <h4 class="menu-price">$30.00</h4>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="menu">
-                    <div class="row">
-                        <div class="col-sm-8">
-                            <h4 class="menu-title">Haircut</h4>
-                            <div class="menu-detail">
-                              45 min.
-                            </div>
-                        </div>
-                        <div class="col-sm-4 menu-price-detail">
-                            <h4 class="menu-price">20.00</h4>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="menu">
-                    <div class="row">
-                        <div class="col-sm-8">
-                            <h4 class="menu-title">Consultation</h4>
-                            <div class="menu-detail">30 min</div>
-                        </div>
-                        <div class="col-sm-4 menu-price-detail">
-                            <h4 class="menu-price">Free.</h4>
-                        </div>
-                    </div>
-                </div>
-
-            </div><!-- .col-sm-6 -->
-
-        </div><!-- .row -->
-
-        <div class="row">
-            <div class="col-sm-6 col-sm-offset-3 long-up text-center">
-                
-            </div>
-        </div><!-- .row -->
-
-        <div class="row">
-            <div class="col-sm-6 col-sm-offset-3">
-                <div class="devider">
-                </div>
-            </div>
-        </div><!-- .row -->
-
-    </div><!-- .container -->
-</section>
 
 
 
