--- a/views/reviews/reviews.ejs
+++ b/views/reviews/reviews.ejs
@@ -26,86 +26,112 @@
       </nav>
 </header>
 
+<body>
+
+  <video poster="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/polina.jpg" id="bgvid" playsinline autoplay muted loop>
+  <!-- 
+- Video needs to be muted, since Chrome 66+ will not autoplay video with sound.
+WCAG general accessibility recommendation is that media such as background video play through only once. Loop turned on for the purposes of illustration; if removed, the end of the video will fade in the same way created by pressing the "Pause" button  -->
+
+<source src="https://player.vimeo.com/external/515626810.sd.mp4?s=885a3301dbadc903f5fb63803b7d18b9d177416d&profile_id=139&oauth2_token_id=57447761" type="video/mp4">
+
+</video>
+<div id="polina">
 
 
-<body class="reviewsPage">
-
-    <% if (user) {%>
-                        <h1 id="headerReviews" class="display-4">Reviews </h1>
-                      <div id="reviewsAll">
-                        <h4 class="reviewsDisplay">How was your experience? Leave a review below: </h4>
-                  
-                    <br>
-
-                    <br>
-                    <div id="reviewForm">     
-                      <form action="/reviews " method="POST">
-                        <label>Stylist</label><br>
-                        <select name="title" placeholder="Service"><br>
-                        <label for="reviewRating">Review for: </label><br>
-                        <Option value="Jessica" name="model" value=>Jessica</Option> 
-                        <Option value="Chloe" name="model" value=>Chloe </Option>
-                        <Option value="Miamor" name="model" value=>Miamor </Option>
+      <% if (user) {%>
+        
+                          
+    
+    <div class="hero-section2">
+      <h1>your</h1>
+      <h1>feedback</h1>
+      <h1>matters!</h1>
+      </div>
+                        <div id="reviewsAll">
+                          
+  
+                      
+                      <div id="reviewForm">     
+                        <form action="/reviews " method="POST">
+                          <label>Stylist</label><br>
+                          <select name="title" placeholder="Service"><br>
+                          <label for="reviewRating">Review for: </label><br>
+                          <Option value="Jessica" name="model" value=>Jessica</Option> 
+                          <Option value="Chloe" name="model" value=>Chloe </Option>
+                          <Option value="Miamor" name="model" value=>Miamor </Option>
+                          </select><br>
+  
+                          <label>Service</label><br>
+                          <select name="service" placeholder="Service"><br>
+                          <Option value="Extensions" name="model" value=>Extensions</Option> 
+                          <Option value="Microlinks" name="model" value=>Microlinks</Option>
+                          <Option value="Box-Braids" name="model" value=>Box-Braids</Option>
+                          <Option value="Wash/Style" name="model" value=>Wash/Style</Option> 
+                          <Option value="Full Color" name="model" value=>Full Color</Option>
+                          <Option value="Partial Color" name="model" value=>Partial Color</Option>
+                          <Option value="Basic Style" name="model" value=>Basic Style</Option> 
+                          <Option value="Kids Wash/Style" name="model" value=>Kids Wash/Style</Option>
+                          <Option value="Hair Cut" name="model" value=>Hair Cut</Option>
+                          <Option value="Consultation" name="model" value=>Consultation</Option> 
+                        
+                        
                         </select><br>
-
-                        <label>Service</label><br>
-                        <select name="service" placeholder="Service"><br>
-                        <Option value="Extensions" name="model" value=>Extensions</Option> 
-                        <Option value="Microlinks" name="model" value=>Microlinks</Option>
-                        <Option value="Box-Braids" name="model" value=>Box-Braids</Option>
-                        <Option value="Wash/Style" name="model" value=>Wash/Style</Option> 
-                        <Option value="Full Color" name="model" value=>Full Color</Option>
-                        <Option value="Partial Color" name="model" value=>Partial Color</Option>
-                        <Option value="Basic Style" name="model" value=>Basic Style</Option> 
-                        <Option value="Kids Wash/Style" name="model" value=>Kids Wash/Style</Option>
-                        <Option value="Hair Cut" name="model" value=>Hair Cut</Option>
-                        <Option value="Consultation" name="model" value=>Consultation</Option> 
-                      
-                      
-                      </select><br>
+    
+    
+                          <label>Review</label><br>
+                          <textarea name="content" row="4" style="width: 18rem;" placeholder="Please review your experience at "></textarea> <br>
+                          
+                          
+                          <label>Rating</label><br>
+                          <select name="rating" placeholder="Rating"><br>
+                          <Option value="Would recommend" name="model" value=>Would recommend</Option>   
+                          <Option value="May visit again" name="model" value=>May visit again</Option>  
+                          <Option value="Would not recommend" name="model" value=>Would not recommend</Option></select>  <br>
+                          
+                        
+              
+                          <button id="reviews" type="submit">Submit Review</button>
+                          </form>
+  
+                          </div><br><br><br>
   
   
-                        <label>Review</label><br>
-                        <textarea name="content" row="4" style="width: 18rem;" placeholder="Please review your experience at "></textarea> <br>
-                        
-                        
-                        <label>Rating</label><br>
-                        <select name="rating" placeholder="Rating"><br>
-                        <Option value="Would recommend" name="model" value=>Would recommend</Option>   
-                        <Option value="May visit again" name="model" value=>May visit again</Option>  
-                        <Option value="Would not recommend" name="model" value=>Would not recommend</Option></select>  <br>
-                        
-                      
-            
-                        <button id="reviews" type="submit">Submit Review</button>
-                        </form>
-
-                        </div><br><br><br>
-
-
-
-
-                           
-                          <%if (reviews.length){%>
-                       
-                          <%reviews.forEach((review) =>{%> 
-                         
-                            <div class="reviewLocation">
-                               
-                              <div> <h2><strong><%=review.title%></strong></h2><h5><%=review.rating%></h5></div>
-                              
-                             <h4><%=review.content%></h4> 
+  
+  
                              
-                            <h5>Posted by:<%=review.postedBy%></h5>
-                 
-                            </div>
-                          <%})%>
-                       <%} else {%>
-               <br><h5 class="reviews"> Be the first to review  </h5> 
-               <%}%>
-             </div>
-    <%}%>
+                            <%if (reviews.length){%>
+                         
+                            <%reviews.forEach((review) =>{%> 
+                           
+                              <div class="reviewLocation">
+                                 
+                                <div> <h4><strong><%=review.title%></strong></h4><h5><%=review.rating%></h5></div>
+                                
+                               <h4><%=review.content%></h4> 
+                               
+                              <h5>Posted by:<%=review.postedBy%></h5>
+                   
+                              </div>
+                            <%})%>
+                         <%} else {%>
+                 <br><h5 class="reviews"> Be the first to review  </h5> 
+                 <%}%>
+               </div>
+      <%}%>
+      </div>
     </div>
+                           </body>
+
+  
+  
+</div>
+
+
+  
+  
+
+
     <%-include('../partials/footer')%>
     
    
