--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -36,6 +36,10 @@ background: radial-gradient(circle, rgba(255,142,142,0.29175420168067223) 0%, rg
     
 }
 
+h1 {
+  font: 700 50px/1.2 'Dancing Script', cursive;
+}
+
 
 
 main {
@@ -64,6 +68,7 @@ thead {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  padding: 50px;
 }
 
 .box{
@@ -198,10 +203,19 @@ div.reviewLocation{
 }
 
 #reviewForm{
-  padding: 10px;
-
-  
+  padding: 10px; 
 }
+
+#reviewForm2{
+  width: auto;
+  margin: auto;
+  max-width: 500px;
+  padding: 20px 30px;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.4);
+  box-shadow: 0 10px 10px 10px  rgba(0, 0, 0, 0.2); 
+}
+
 #reviewForm input, textarea{
   margin-top: 10px;
 
@@ -275,122 +289,6 @@ div.reviewLocation{
   .box{
       margin: 30px;
   }
-}
-
-/*Menu*/
-
-
-
-img {
-	max-width: 100%;
-	height: auto;
-}
-
-h1 {
-  font: 700 28px/1.2 'Dancing Script', cursive; 
-}
-
- h2, h3, h4, h5, h6 {
-	font: 700 54px/1.2 'Crimson Text', serif;
-	margin: 0 0 20px;
-
-}
-
-h2 {
-	font-size: 48px;
-	margin: 0 0 18px;
-}
-
-h3 {
-	font-size: 40px;
-	margin: 0 0 15px;
-}
-
-h4 {
-	font-size: 20px;
-	margin: 0 0 10px;
-}
-
-h5 {
-	font-size: 18px;
-	font-weight: 400;
-	margin: 0 0 8px;
-}
-
-h6 {
-	font-size: 16px;
-	font-weight: 400;
-	margin: 0 0 5px;
-}
-
-
-.module {
-	position: relative;
-	background: rgba(255, 255, 255, 0.29);
-  border-radius: 50px;
-  max-width: 900px;
-  padding: 20px 30px ;
-  border-radius: 10px;
-  background-color: rgba(255, 255, 255, 0.4);
-  box-shadow: 0 10px 10px 10px  rgba(0, 0, 0, 0.2);
-  width: 1000px;
-  max-width: 100%;
-  height: 100%;
-  display: flex;
-  flex-wrap: wrap;
- 
-}
-
-
-.module-header {
-	text-align: center;
-	margin: 0 0 60px;
-}
-
-.menu {
-	
-	padding: 0 0 10px;
-	margin: 0 0 20px;
-}
-
-.menu-classic img {
-	margin: 0 0 10px;
-}
-
-.menu-title,
-.menu-price {
-	font-size: 16px;
-	margin: 0;
-}
-
-.intro-title,
-.module-title,
-.callout-text,
-.iconbox-title {
-	font: 700 28px/1.2 'Dancing Script', cursive;
-	margin: 0 0 18px;
-}
-
-.menu-detail {
-	font-size: 14px;
-}
-
-.menu-price-detail {
-	position: relative;
-	text-align: right;
-}
-
-.menu-label {
-	background: #fae7d7;
-	position: relative;
-	display: inline-block;
-	padding: 2px 10px 0px 10px;
-	font-family: 'Crimson Text', serif;
-	letter-spacing: 1px;
-	font-style: italic;
-	font-size: 13px;
-	float: right;
-	top: 5px;
 }
 
 
