--- a/views/appts/show.ejs
+++ b/views/appts/show.ejs
@@ -33,10 +33,11 @@
                     <td>
                         <input type="datetime-local" name="date" value="2021-03-22T15:30" min="2021-03-22T00:00" max="2022-03-22T00:00">
                          </td><br>
-                         <label>Review</label><br>
-                         <textarea name="comment" row="4" style="width: 18rem;" placeholder="Please review your experience at "><% appt.description %></textarea> <br>
             </tbody>
-        </table> <input type="submit" value="Book" />  </form>
+        </table>
+        <label>Is there anything you would like your stylist to know?</label><br>
+                         <textarea name="comment" row="4" style="width: 18rem;" placeholder="Please review your experience at "><% appt.description %></textarea><br> 
+         <input type="submit" value="Book" />  </form>
     </form>
 </body>
 </html>
