--- a/views/appts/show.ejs
+++ b/views/appts/show.ejs
@@ -36,8 +36,8 @@
             </tbody>
         </table>
         <label>Is there anything you would like your stylist to know?</label><br>
-                         <textarea name="comment" row="4" style="width: 18rem;" placeholder="Please review your experience at "><% appt.description %></textarea><br> 
-         <input type="submit" value="Book" />  </form>
+                         <textarea name="comment" row="4" style="width: 18rem;"><% appt.description %></textarea><br> 
+         <input type="submit" value="Submit" />  </form>
     </form>
 </body>
 </html>
