--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -292,6 +292,119 @@ div.reviewLocation{
 }
 
 
+/* video background on reviews */
+
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.reviewsBody {
+  height: 100vh;
+  display: grid;
+  place-items: center;
+  font-family: "Nunito", sans-serif;
+
+  --primary: #2c2c2c;
+  --blue: #14b0ee;
+}
+
+
+
+
+
+#videoBkg {
+  position: fixed;
+  z-index: -1;
+}
+
+.hero-section {
+  position: absolute;
+  top: 30%;
+  left: 12%;
+  transform: translateY(-30%);
+  z-index: 10;
+}
+.hero-section > * {
+  transform: translateY(80px);
+  opacity: 0;
+  animation: fadeUp 1s ease-out forwards;
+}
+.hero-section h1 {
+  font-size: 5rem;
+}
+.hero-section p {
+  font-size: 1.2rem;
+  margin: 4em 0 2em 0;
+  line-height: 30px;
+}
+.hero-section p strong {
+  color: var(--blue);
+}
+.hero-section button {
+  border: 2px solid var(--primary);
+  padding: 1em 1.2em;
+  outline: none;
+  background-color: transparent;
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  font-weight: 600;
+  letter-spacing: 1px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+.hero-section button:hover {
+  background-color: var(--blue);
+  color: #ffffff;
+  border: 2px solid var(--blue);
+}
+
+.hero-section h1:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.hero-section h1:nth-child(3) {
+  animation-delay: 0.5s;
+}
+.hero-section h1:nth-child(4) {
+  animation-delay: 0.8s;
+}
+.hero-section p {
+  animation-delay: 1s;
+}
+.hero-section button {
+  animation-delay: 1.2s;
+}
+
+
+/* MEDIA QUERIES for video background
+----------------------------------------- */
+@media (min-aspect-ratio: 16/9) {
+  #videoBkg {
+    width: 100%;
+    height: auto;
+  }
+}
+
+@media (max-aspect-ratio: 16/9) {
+  #videoBkg {
+    width: auto;
+    height: 100%;
+  }
+}
+
+@keyframes fadeUp {
+  0% {
+    transform: translateY(80px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
 
 
 /* ---------------------------------------------- /*
