channges to reviews page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -304,7 +304,7 @@ div.reviewLocation{
 .reviewsBody {
   height: 100vh;
   display: grid;
-  place-items: center;
+  
   font-family: "Nunito", sans-serif;
 
   --primary: #2c2c2c;
@@ -324,8 +324,9 @@ div.reviewLocation{
   position: absolute;
   top: 30%;
   left: 12%;
-  transform: translateY(-30%);
+  
   z-index: 10;
+  margin:auto
 }
 .hero-section > * {
   transform: translateY(80px);
