--- a/views/reviews/reviews.ejs
+++ b/views/reviews/reviews.ejs
@@ -34,20 +34,14 @@
 </video>
 
 <div class="hero-section">
-  <h1>eat.</h1>
-  <h1>sleep.</h1>
-  <h1>ski.</h1>
-  <h1>repeat.</h1>
-  <p>Need we say more? <br>Come to <strong>Queenstown</strong> and have the time of your life.</p>
 
-  
   <% if (user) {%>
         
                           
     
     <div class="hero-section2">
       <h1>Your Feedback Matters!</h1><br>
-      <h2>Please let us know how we're doing.</h2><br>>
+      <h2>Please let us know how we're doing.</h2></div>
                        
       <div id="reviewsAll">
                           
