--- a/views/appts/show.ejs
+++ b/views/appts/show.ejs
@@ -4,7 +4,7 @@
 <body>
     <h1>Update Appointment</h1><br>
     <form action='/appts/<%= appt._id%>?_method=PUT' method='POST'>
-        <table class="table">
+        <table id="reviewForm2">
             <thead>
                 <tr>
                     <th>Stylist</th>
