--- a/views/reviews/reviews.ejs
+++ b/views/reviews/reviews.ejs
@@ -17,11 +17,14 @@
             <div class="collapse navbar-collapse">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="/appts">Scheduled Appointments</a>
+                  <a class="nav-link" href="/appts">Appointments</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/appts/new">Book <i class="far fa-plus-square"></i></a>
                 </li>
+				<li class="nav-item">
+					<a class="nav-link" href="/reviews">Reviews</a>
+				  </li>
             </div>
       </nav>
 </header>
@@ -40,14 +43,14 @@
                           
     
     <div class="hero-section2">
-      <h1>Your Feedback Matters!</h1><br>
-      <h2>Please let us know how we're doing.</h2></div>
+     <h1>Your Feedback Matters!</h1><br>
+      <h2>Please let us know how we're doing.</h2></div><br>
                        
       <div id="reviewsAll">
                           
   
                       
-                      <div id="reviewForm">     
+                      <div id="reviewForm2">     
                         <form action="/reviews " method="POST">
                           <label>Stylist</label><br>
                           <select name="title" placeholder="Service"><br>
