--- a/views/appts/index.ejs
+++ b/views/appts/index.ejs
@@ -17,11 +17,14 @@
             <div class="collapse navbar-collapse">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="/appts">Scheduled Appointments</a>
+                  <a class="nav-link" href="/appts">Appointments</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/appts/new">Book <i class="far fa-plus-square"></i></a>
                 </li>
+				<li class="nav-item">
+					<a class="nav-link" href="/reviews">Reviews</a>
+				  </li>
             </div>
       </nav>
 </header>
@@ -32,8 +35,8 @@
 
 
 
-    <h1>Appointment</h1><br>
-	<table class="table" id="flight-index">
+    <h1>Appointments</h1><br>
+	<table id="reviewForm2" id="flight-index">
 		<thead>
 			<th scope="col">Stylist</th>
 			<th scope="col">Service</th>
