--- a/views/appts/new.ejs
+++ b/views/appts/new.ejs
@@ -17,11 +17,14 @@
             <div class="collapse navbar-collapse">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="/appts">Scheduled Appointments</a>
+                  <a class="nav-link" href="/appts">Appointments</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/appts/new">Book <i class="far fa-plus-square"></i></a>
                 </li>
+				<li class="nav-item">
+					<a class="nav-link" href="/reviews">Reviews</a>
+				  </li>
             </div>
       </nav>
 </header>
