--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="/appts/new">Book <i class="far fa-plus-square"></i></a>
                 </li>
+				<li class="nav-item">
+					<a class="nav-link" href="/reviews">Reviews</a>
+				  </li>
                   <ul>
                     <% if (user) { %>
                     <li class="nav-item">
